Login: prevent background svg to overlap content

--- a/src/containers/Login/Login.module.scss
+++ b/src/containers/Login/Login.module.scss
@@ -5,9 +5,10 @@
   position: relative;
   height: 100vh;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
-  z-index: 0;
+  text-align: center;
 
   .title {
     margin-bottom: 32px;
@@ -23,6 +24,7 @@
   .users {
     display: flex;
     text-align: center;
+    justify-content: center;
 
     >:not(:last-child) {
       margin-right: 64px;
@@ -38,10 +40,10 @@
     }
   }
 
-  .Background {
-    position: absolute;
-    bottom: 0;
-    z-index: -1;
+  .passwordSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   h1 {
@@ -62,5 +64,9 @@
     grid-template-columns: auto auto;
     margin-bottom: 16px;
   }
-}
 
+  .Background {
+    background-color: $color-background;
+    flex-shrink: 0;
+  }
+}
